--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <meta name="description" content="Wedding Della & Arsyad">
     <meta property="og:title" content="Wedding Della & Arsyad">
     <meta property="og:description" content="Wedding Della & Arsyad">
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1126797485277458445/1424657351197069352/bg2.webp?ex=68e4bf0d&is=68e36d8d&hm=f9fb0180e3088b871152e0942596c601d88e1510839083412eec4d56af528a29&">
-    <meta property="og:image:secure_url" content="https://cdn.discordapp.com/attachments/1126797485277458445/1424657351197069352/bg2.webp?ex=68e4bf0d&is=68e36d8d&hm=f9fb0180e3088b871152e0942596c601d88e1510839083412eec4d56af528a29&">
+    <meta property="og:image" content="https://arsyadmk.github.io/n/gh5nb7y4uv5eit/bg2.webp">
+    <meta property="og:image:secure_url" content="https://arsyadmk.github.io/n/gh5nb7y4uv5eit/bg2.webp">
     <meta property="og:image:type" content="image/webp">
     <meta property="og:image:alt" content="Wedding Della & Arsyad">
     <meta property="og:image:width" content="980">
@@ -103,6 +103,8 @@
 
 <body data-audio="https://arsyadmk.github.io/n/elijah_woods-247_365_2.mp3" data-confetti="true" data-time="2025-11-08 08:00:00">
 
+    <!-- <body data-key="08112025da08112025da08112025da08112025da08112025da" data-url="https://pubapiweddingofarsyadmk.novitardella.com/" data-audio="https://arsyadmk.github.io/n/elijah_woods-247_365_2.mp3" data-confetti="true" data-time="2025-11-08 08:00:00"></body> -->
+
     <!-- Root Invitation -->
     <div class="row m-0 p-0 opacity-0" id="root">
 
@@ -112,16 +114,16 @@
                 <div class="d-flex position-absolute w-100 h-100">
                     <div class="position-relative overflow-hidden vw-100">
                         <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
-                            <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657351197069352/bg2.webp?ex=68e4bf0d&is=68e36d8d&hm=f9fb0180e3088b871152e0942596c601d88e1510839083412eec4d56af528a29&" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
+                            <img src="https://arsyadmk.github.io/n/gh5nb7y4uv5eit/bg2.webp" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
                         </div>
                         <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
-                            <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657612569448539/bg10.webp?ex=68e4bf4b&is=68e36dcb&hm=7133eb79b6146dfac3d286511ec8a05193893d1ff0919a2f5073c68a28094fdc&" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
+                            <img src="https://arsyadmk.github.io/n/gh5nb7y4uv5eit/bg10.webp" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
                         </div>
                         <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
-                            <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657710296596500/bg4.webp?ex=68e4bf62&is=68e36de2&hm=b68c6b3c63489b00ce60b83bcced7e75c6a072709bf30a6228888e661f386b0b&" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
+                            <img src="https://arsyadmk.github.io/n/gh5nb7y4uv5eit/bg4.webp" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
                         </div>
                         <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
-                            <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657824088064022/bg14.webp?ex=68e4bf7e&is=68e36dfe&hm=57fe9f3f07944ccb382d219ed40723dc2d71882f5541ce6ab0bc3b9ea94fdd5f&" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
+                            <img src="https://arsyadmk.github.io/n/gh5nb7y4uv5eit/bg14.webp" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
                         </div>
                     </div>
                 </div>
@@ -140,13 +142,13 @@
 
                 <!-- Home -->
                 <section id="home" class="bg-light-dark position-relative overflow-hidden p-0 m-0">
-                    <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657824088064022/bg14.webp?ex=68e4bf7e&is=68e36dfe&hm=57fe9f3f07944ccb382d219ed40723dc2d71882f5541ce6ab0bc3b9ea94fdd5f&" fetchpriority="high" decoding="async" alt="bg" class="position-absolute opacity-25 top-50 start-50 translate-middle bg-cover-home">
+                    <img src="https://arsyadmk.github.io/n/gh5nb7y4uv5eit/bg14.webp" fetchpriority="high" decoding="async" alt="bg" class="position-absolute opacity-25 top-50 start-50 translate-middle bg-cover-home">
 
                     <div class="position-relative text-center bg-overlay-auto" style="background-color: unset;">
                         <h1 class="font-darleston pt-5 pb-4 fw-medium" style="font-size: 2.25rem;">Undangan Pernikahan
                         </h1>
 
-                        <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657351197069352/bg2.webp?ex=68e4bf0d&is=68e36d8d&hm=f9fb0180e3088b871152e0942596c601d88e1510839083412eec4d56af528a29&" fetchpriority="high" decoding="async" alt="bg" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto cursor-pointer">
+                        <img src="https://arsyadmk.github.io/n/gh5nb7y4uv5eit/bg2.webp" fetchpriority="high" decoding="async" alt="bg" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto cursor-pointer">
 
                         <h2 class="font-darleston my-4" style="font-size: 2.25rem;">Della &amp; Arsyad</h2>
                         <p class="font-lora my-2" style="font-size: 1.25rem;">Sabtu, 8 November 2025</p>
@@ -188,7 +190,7 @@
                         </div>
 
                         <div data-aos="fade-up" data-aos-duration="2000" class="pb-1">
-                            <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657929419755640/cewe.webp?ex=68e4bf97&is=68e36e17&hm=71a677f868a494894024108cbfca0d5de59c30fc24a195855cfec5d3292a3235&" fetchpriority="high" decoding="async" alt="cewe" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto cursor-pointer">
+                            <img src="https://arsyadmk.github.io/n/gh5nb7y4uv5eit/cewe.webp" fetchpriority="high" decoding="async" alt="cewe" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto cursor-pointer">
                         </div>
                         <div data-aos="fade-up" data-aos-duration="2000" class="pb-1">
                             <h2 class="font-darleston m-0" style="font-size: 2.125rem;">Novita Rizkia Della Khairunnisa</h2>
@@ -221,7 +223,7 @@
                         </div>
 
                         <div data-aos="fade-up" data-aos-duration="2000" class="pb-1">
-                            <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424670175944511520/cowo.webp?ex=68e4caff&is=68e3797f&hm=f48e26d6b06876d4fefe858e4aa1eccb267f6f2530abfb40fddd00561943a309&" fetchpriority="high" decoding="async" alt="cowo" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto cursor-pointer">
+                            <img src="https://arsyadmk.github.io/n/gh5nb7y4uv5eit/cowo.webp" fetchpriority="high" decoding="async" alt="cowo" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto cursor-pointer">
                         </div>
                         <div data-aos="fade-up" data-aos-duration="2000" class="pb-1">
                             <h2 class="font-darleston m-0" style="font-size: 2.125rem;">Arsyad Muhammad Khoiri</h2>
@@ -361,22 +363,22 @@
                             <div class="container mt-3">
                                 <div class="row">
                                     <div class="mb-1">
-                                        <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657351197069352/bg2.webp?ex=68e4bf0d&is=68e36d8d&hm=f9fb0180e3088b871152e0942596c601d88e1510839083412eec4d56af528a29&" class="img-fluid rounded">
+                                        <img src="https://arsyadmk.github.io/n/gh5nb7y4uv5eit/bg2.webp" class="img-fluid rounded">
                                     </div>
                                     <div class="mb-1">
-                                        <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657710296596500/bg4.webp?ex=68e4bf62&is=68e36de2&hm=b68c6b3c63489b00ce60b83bcced7e75c6a072709bf30a6228888e661f386b0b&" class="img-fluid rounded">
+                                        <img src="https://arsyadmk.github.io/n/gh5nb7y4uv5eit/bg4.webp" class="img-fluid rounded">
                                     </div>
                                     <div class="mb-1">
-                                        <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424658100945686618/bg5.webp?ex=68e4bfc0&is=68e36e40&hm=909973992ff675da16906f5b08386a37ba89ebc3e4e0520170128d971d200603&" class="img-fluid rounded">
+                                        <img src="https://arsyadmk.github.io/n/gh5nb7y4uv5eit/bg5.webp" class="img-fluid rounded">
                                     </div>
                                     <div class="mb-1">
-                                        <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424658189122801715/bg6.webp?ex=68e4bfd5&is=68e36e55&hm=cbc81d8fda05875f40e2d61e59ceb025b3b1e7c8b6c504c9d0c81b119f770adc&" class="img-fluid rounded">
+                                        <img src="https://arsyadmk.github.io/n/gh5nb7y4uv5eit/bg6.webp" class="img-fluid rounded">
                                     </div>
                                     <div class="mb-1">
-                                        <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424658252120981514/bg7.webp?ex=68e4bfe4&is=68e36e64&hm=7f1c1b3865342ab62c0033c2fc998f751aea94d1653446a44498446d5ae496fb&" class="img-fluid rounded">
+                                        <img src="https://arsyadmk.github.io/n/gh5nb7y4uv5eit/bg7.webp" class="img-fluid rounded">
                                     </div>
                                     <div class="mb-1">
-                                        <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424658316440895599/bg15.webp?ex=68e4bff3&is=68e36e73&hm=fc5cd23390bd797515ea8075fc7e6647f913aca655ce72d913bd502671f77f7c&" class="img-fluid rounded">
+                                        <img src="https://arsyadmk.github.io/n/gh5nb7y4uv5eit/bg15.webp" class="img-fluid rounded">
                                     </div>
                                 </div>
                             </div>
@@ -490,7 +492,7 @@
             <div class="d-flex flex-column text-center">
                 <h2 class="font-darleston mb-4" style="font-size: 2.25rem;">The Wedding Of</h2>
 
-                <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657351197069352/bg2.webp?ex=68e4bf0d&is=68e36d8d&hm=f9fb0180e3088b871152e0942596c601d88e1510839083412eec4d56af528a29&" fetchpriority="high" decoding="async" alt="background" class="img-center-crop rounded-circle border border-3 border-light shadow mb-4 mx-auto">
+                <img src="https://arsyadmk.github.io/n/gh5nb7y4uv5eit/bg2.webp" fetchpriority="high" decoding="async" alt="background" class="img-center-crop rounded-circle border border-3 border-light shadow mb-4 mx-auto">
 
                 <h2 class="font-darleston mb-4" style="font-size: 2.25rem;">Della &amp; Arsyad</h2>
                 <div id="guest-name" data-message="Kepada Yth Bapak/Ibu/Saudara/i"></div>
