--- a/index.html
+++ b/index.html
@@ -101,9 +101,11 @@
 <!-- https://weddingofarsyadmk.novitardella.com/assets/music/elijah_woods-247_365_2.mp3 -->
 <!-- ./assets/music/elijah_woods-247_365_2.mp3 -->
 
-<body data-audio="https://arsyadmk.github.io/n/elijah_woods-247_365_2.mp3" data-confetti="true" data-time="2025-11-08 08:00:00">
+<!-- <body data-audio="https://arsyadmk.github.io/n/elijah_woods-247_365_2.mp3" data-confetti="true" data-time="2025-11-08 08:00:00"> -->
 
-    <!-- <body data-key="08112025da08112025da08112025da08112025da08112025da" data-url="https://pubapiweddingofarsyadmk.novitardella.com/" data-audio="https://arsyadmk.github.io/n/elijah_woods-247_365_2.mp3" data-confetti="true" data-time="2025-11-08 08:00:00"></body> -->
+<!-- <body data-key="08112025da08112025da08112025da08112025da08112025da" data-url="https://pubapiweddingofarsyadmk.novitardella.com/" data-audio="https://arsyadmk.github.io/n/elijah_woods-247_365_2.mp3" data-confetti="true" data-time="2025-11-08 08:00:00"> -->
+
+<body data-key="48b905a973906295fc5d1e8ad8668b2ccb82f45af203dca415" data-url="https://pubapiweddingofarsyadmk.novitardella.com/" data-audio="https://arsyadmk.github.io/n/elijah_woods-247_365_2.mp3" data-confetti="false" data-time="2025-11-08 08:00:00">
 
     <!-- Root Invitation -->
     <div class="row m-0 p-0 opacity-0" id="root">
